logs/rqworker.log.2017-09-08_16
16:13:39 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:19:30 high: script_on_saltmaster.parse_salt_event({'tag': 'key', 'data': {'_stamp': '2017-09-08T08:19:30.843110', 'rotate_aes_key': True}}) (1d7e39e5-5492-41e7-a69a-51ac863aca52)
16:19:30 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:19:30 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:19:30   File "/root/xbox/script_on_saltmaster.py", line 94
    else:
       ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/usr/lib/python2.7/site-packages/rq/worker.py", line 713, in perform_job
    rv = job.perform()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 556, in perform
    self._result = self._execute()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 562, in _execute
    return self.func(*self.args, **self.kwargs)
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 205, in func
    return import_attribute(self.func_name)
  File "/usr/lib/python2.7/site-packages/rq/utils.py", line 152, in import_attribute
    module = importlib.import_module(module_name)
  File "/usr/lib64/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/root/xbox/script_on_saltmaster.py", line 94
    else:
       ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/usr/lib/python2.7/site-packages/rq/worker.py", line 713, in perform_job
    rv = job.perform()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 556, in perform
    self._result = self._execute()
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 562, in _execute
    return self.func(*self.args, **self.kwargs)
  File "/usr/lib/python2.7/site-packages/rq/job.py", line 205, in func
    return import_attribute(self.func_name)
  File "/usr/lib/python2.7/site-packages/rq/utils.py", line 152, in import_attribute
    module = importlib.import_module(module_name)
  File "/usr/lib64/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/root/xbox/script_on_saltmaster.py", line 94
    else:
       ^
IndentationError: expected an indented block
16:19:30 Invoking exception handler <bound method Worker.move_to_failed_queue of <rq.worker.Worker object at 0x2e028d0>>
16:19:30 Moving job to u'failed' queue
16:19:30 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:19:30 Cleaning registries for queue: high
16:19:30 Cleaning registries for queue: default
16:19:30 Cleaning registries for queue: low
16:19:30 
16:19:30 *** Listening on high, default, low...
16:19:30 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:25:30 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:31:30 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:37:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:43:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:49:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
16:55:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
17:01:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
17:07:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
17:13:31 Sent heartbeat to prevent worker timeout. Next one should arrive within 420 seconds.
